fix: adjusted ProfileBanner container to match CriteraList gap units

--- a/components/Profile/Banner/ProfileBanner.module.scss
+++ b/components/Profile/Banner/ProfileBanner.module.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	margin-bottom: 2rem;
 	display: flex;
-	gap: 2rem;
+	gap: 1rem;
 	padding-bottom: 2rem;
 	border-bottom: 1px solid $stroke;
 	justify-content: space-between;
